--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       left: 0;
       width: 100%;
       height: 100vh;
-      object-fit: contain;
+      object-fit: cover;
       object-position: top;
       z-index: -2;
       transition: transform 0.2s ease-out, filter 0.3s ease-out;
@@ -81,9 +81,9 @@
 
     .logo {
       position: absolute;
-      top: 10px;
-      left: 10px;
-      height: 60px;
+      top: 20px;
+      left: 20px;
+      height: 100px;
       z-index: 2;
     }
 
@@ -93,41 +93,41 @@
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 1;
-      background-color: rgba(0, 0, 0, 0.75);
-      padding: 15px;
-      border-radius: 12px;
+      background-color: rgba(0, 0, 0, 0.65);
+      padding: 30px;
+      border-radius: 16px;
       text-align: center;
-      max-width: 90%;
+      max-width: 600px;
       backdrop-filter: blur(4px);
     }
 
     .intro h1 {
-      font-size: 22px;
-      margin-bottom: 5px;
+      font-size: 36px;
+      margin-bottom: 10px;
       color: #fff;
     }
 
     .intro p {
-      font-size: 12px;
+      font-size: 16px;
       color: #ccc;
     }
 
     .content-wrapper {
       background: #000;
       width: 100%;
-      padding: 50px 10px;
+      padding: 160px 20px 150px;
       box-sizing: border-box;
-      margin-top: 10px;
+      margin-top: 30px;
     }
 
     .content {
-      max-width: 90%;
+      max-width: 600px;
       margin: 0 auto;
       text-align: center;
-      line-height: 1.3;
-      font-size: 16px;
+      line-height: 1.4;
+      font-size: 22px;
       color: #fff;
-      padding: 10px;
+      padding: 30px;
     }
 
     .footer {
@@ -135,7 +135,7 @@
       bottom: 0;
       width: 100%;
       text-align: center;
-      font-size: 10px;
+      font-size: 14px;
       padding: 5px 0;
       background: #000;
       color: rgba(255, 255, 255, 0.7);
@@ -157,7 +157,7 @@
     .black-box {
       position: absolute;
       background-color: black;
-      padding: 30px;
+      padding: 60px;
       width: 100%;
       text-align: center;
       border-radius: 10px;
@@ -169,44 +169,39 @@
     }
 
     .black-box p {
-      font-size: 18px;
+      font-size: 25px;
       color: white;
-      line-height: 1.4;
+      line-height: 1.6;
       margin: 0;
       text-align: center;
     }
 
     @media (max-width: 600px) {
       .logo {
-        height: 50px;
-        left: 5px;
+        height: 60px;
+        left: 10px;
       }
 
       .intro {
         width: 90%;
-        padding: 10px;
+        padding: 20px;
       }
 
       .intro h1 {
-        font-size: 20px;
+        font-size: 28px;
       }
 
       .intro p {
-        font-size: 10px;
+        font-size: 14px;
       }
 
       .content {
-        font-size: 14px;
-        padding-bottom: 30px;
-      }
-
-      .footer {
-        font-size: 10px;
-        padding: 5px 0;
+        font-size: 16px;
+        padding-bottom: 80px;
       }
     }
 
-    /* Compact design for devices under 480px */
+    /* Final changes for phones under 480px */
     @media (max-width: 480px) {
       .hero-image {
         width: 100vw;
@@ -215,38 +210,28 @@
       }
 
       .intro {
-        padding: 12px;
+        padding: 22.5px;
       }
 
       .intro h1 {
-        font-size: 18px;
+        font-size: 27px;
       }
 
       .intro p {
-        font-size: 10px;
-      }
-
-      .content-wrapper {
-        padding: 30px 5px;
+        font-size: 12px;
       }
 
       .content {
-        font-size: 14px;
-        padding: 10px;
-      }
-
-      .footer {
-        font-size: 8px;
-        padding: 5px 0;
+        font-size: 16.5px;
+        padding: 22.5px;
       }
 
       .black-box {
-        padding: 20px;
-        width: 100%;
+        padding: 45px;
       }
 
       .black-box p {
-        font-size: 14px;
+        font-size: 18.75px;
       }
     }
   </style>
