--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 <body>
   <div class="hero">
-    <img src="your-banner-image.jpg" alt="Banner" class="hero-image" id="heroImage" />
+    <img src="backtruck.jpeg" alt="Banner" class="hero-image" id="heroImage" />
     <img src="sillysilly.png" alt="Runke Logo" class="logo" />
     <div class="intro">
       <h1>Who are we?</h1>
