--- a/index.html
+++ b/index.html
@@ -17,25 +17,6 @@
       background-color: #000;
       color: #ccc;
       overflow-x: hidden;
-      scrollbar-width: thin;
-      scrollbar-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0);
-    }
-
-    ::-webkit-scrollbar {
-      width: 6px;
-    }
-
-    ::-webkit-scrollbar-track {
-      background: rgba(0, 0, 0, 0);
-    }
-
-    ::-webkit-scrollbar-thumb {
-      background-color: rgba(255, 255, 255, 0.3);
-      border-radius: 3px;
-    }
-
-    ::-webkit-scrollbar-thumb:hover {
-      background-color: rgba(255, 255, 255, 0.5);
     }
 
     .hero {
@@ -54,8 +35,6 @@
       object-fit: cover;
       object-position: top;
       z-index: -2;
-      transition: transform 0.2s ease-out, filter 0.3s ease-out;
-      will-change: transform, filter;
     }
 
     .hero-overlay {
@@ -66,25 +45,6 @@
       width: 100%;
       z-index: -1;
       pointer-events: none;
-    }
-
-    .blanket {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 100vh;
-      background: linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.6) 20%, rgba(0,0,0,0) 60%);
-      backdrop-filter: blur(0px);
-      opacity: 0;
-      transition: opacity 0.3s ease-out, backdrop-filter 0.3s ease-out;
-    }
-
-    .logo {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      height: 100px;
-      z-index: 2;
     }
 
     .intro {
@@ -102,70 +62,24 @@
     }
 
     .intro h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
+      font-size: 40px;
+      font-weight: bold;
       color: #fff;
     }
 
     .intro p {
-      font-size: 16px;
-      color: #ccc;
-    }
-
-    .content-wrapper {
-      background: #000;
-      width: 100%;
-      padding: 160px 20px 150px;
-      box-sizing: border-box;
-      margin-top: 30px;
-    }
-
-    .content {
-      max-width: 600px;
-      margin: 0 auto;
-      text-align: center;
-      line-height: 1.4;
-      font-size: 22px;
-      color: #fff;
-      padding: 30px;
-    }
-
-    .footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      text-align: center;
-      font-size: 14px;
-      padding: 5px 0;
-      background: #000;
-      color: rgba(255, 255, 255, 0.7);
-      z-index: 10;
-      pointer-events: none;
-    }
-
-    .footer a {
-      color: #00f;
-      text-decoration: none;
-      font-weight: bold;
-      pointer-events: auto;
-    }
-
-    .footer a:hover {
-      color: #ccc;
+      font-size: 20px;
+      color: #f1f1f1;
+      font-weight: 500;
     }
 
     .black-box {
-      position: relative;
       background-color: black;
-      padding: 60px;
-      width: 100%;
+      padding: 60px 20px;
+      width: 100vw;
       text-align: center;
       border-radius: 10px;
-      max-width: 1000px;
-      margin: 0 auto;
-      top: 200vh;
-      transform: translateY(-50%);
-      transition: top 0.3s ease-out;
+      box-sizing: border-box;
     }
 
     .black-box p {
@@ -176,14 +90,17 @@
       text-align: center;
     }
 
-    /* Final changes for phones under 480px */
+    /* Phone Styling */
     @media (max-width: 480px) {
       .hero {
         height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       .hero-image {
-        position: static;
+        position: relative;
         width: 100%;
         height: 50vh;
         object-fit: cover;
@@ -195,35 +112,30 @@
         left: auto;
         transform: none;
         padding: 20px;
-        background-color: transparent;
+        background-color: black;
         max-width: 100%;
-        backdrop-filter: none;
-        text-align: left;
-      }
-
-      .logo {
-        height: 60px;
-        left: 10px;
+        text-align: center;
+        border-radius: 0;
+        width: 100vw;
       }
 
       .intro h1 {
-        font-size: 28px;
+        font-size: 36px;
+        font-weight: bold;
+        color: #fff;
       }
 
       .intro p {
-        font-size: 14px;
-      }
-
-      .content {
-        font-size: 16px;
-        padding: 22.5px;
+        font-size: 18px;
+        color: #f1f1f1;
+        font-weight: 500;
       }
 
       .black-box {
-        padding: 20px;
+        padding: 30px;
         margin-top: 10px;
-        top: auto;
-        transform: none;
+        width: 100vw;
+        text-align: center;
       }
 
       .black-box p {
@@ -231,20 +143,16 @@
       }
     }
   </style>
-
-<script type='text/javascript' src='https://www.runkenation.com/hbYxriJ_QzjJCPJxNdbqoHT2m6tHYx6TcnGINlEQjGDv0vPnEdjI5vXN7pKzFYGXiHvK9jMXKznVUBTEz_etwA=='></script></head>
+</head>
 
 <body>
   <div class="hero">
-    <img src="backtruck.jpeg" alt="Banner" class="hero-image" id="heroImage" />
-    <img src="sillysilly.png" alt="Runke Logo" class="logo" />
-    <div class="intro">
-      <h1>Who are we?</h1>
-      <p>We (runke) are a 3 person alternative rock band. The three of us have grown up with a strong friendship, a deep connection to music theory, and a strong desire to make music.</p>
-    </div>
-    <div class="hero-overlay">
-      <div class="blanket" id="blanket"></div>
-    </div>
+    <img src="your-banner-image.jpg" alt="Banner" class="hero-image" />
+  </div>
+
+  <div class="intro">
+    <h1>Who are we?</h1>
+    <p>We (runke) are a 3 person alternative rock band. The three of us have grown up with a strong friendship, a deep connection to music theory, and a strong desire to make music.</p>
   </div>
 
   <div class="black-box">
@@ -256,34 +164,5 @@
       <p>We love you dude, chill...</p>
     </div>
   </div>
-
-  <div class="footer">
-    <p><a href="https://www.instagram.com/runke_nation/" target="_blank">@Runke_Nation</a> · RunkeNation@gmail.com · (256) 339 3279</p>
-  </div>
-
-  <script>
-    const blanket = document.getElementById('blanket');
-    const heroImage = document.getElementById('heroImage');
-    const blackBox = document.querySelector('.black-box');
-
-    if (window.innerWidth > 480) {
-      window.addEventListener('scroll', () => {
-        const scrollY = window.scrollY;
-        const maxBlur = 6;
-        const blurAmount = Math.min(scrollY / 60, maxBlur);
-        const scaleAmount = 1 + scrollY / 5000;
-        const opacityAmount = Math.min(scrollY / 300, 1);
-
-        blanket.style.opacity = opacityAmount;
-        blanket.style.backdropFilter = `blur(${blurAmount}px)`;
-        heroImage.style.filter = `blur(${1 + blurAmount}px)`;
-        heroImage.style.transform = `scale(${scaleAmount})`;
-
-        if (scrollY > 100) {
-          blackBox.style.top = `${100 + scrollY / 2}px`;
-        }
-      });
-    }
-  </script>
 </body>
 </html>
