--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <body>
   <div class="hero">
-    <img src="your-banner-image.jpg" alt="Banner" class="hero-image" />
+    <img src="backtruck.jpeg" alt="Banner" class="hero-image" />
   </div>
 
   <div class="intro">
