--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       background-color: #000;
       color: #ccc;
       overflow-x: hidden;
+      min-height: calc(100vh + 100px); /* Extend page height by ~1 inch */
       scrollbar-width: thin;
       scrollbar-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0);
     }
@@ -160,6 +161,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        padding-bottom: 100px; /* Extra space */
       }
 
       .hero-image {
@@ -168,6 +170,15 @@
         height: auto;
         object-fit: cover;
         object-position: center;
+      }
+
+      .logo {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        left: auto;
+        height: 50px;
+        z-index: 2;
       }
 
       .intro {
