--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-color: #000;
       color: #ccc;
       overflow-x: hidden;
-      min-height: calc(100vh + 100px); /* Extend page height by ~1 inch */
+      min-height: calc(100vh + 100px);
       scrollbar-width: thin;
       scrollbar-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0);
     }
@@ -153,7 +153,6 @@
       color: #ccc;
     }
 
-    /* Responsive styles for mobile devices */
     @media (max-width: 480px) {
       .hero {
         height: auto;
@@ -161,24 +160,11 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        padding-bottom: 100px; /* Extra space */
-      }
-
-      .hero-image {
-        position: relative;
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        object-position: center;
+        padding-bottom: 100px;
       }
 
       .logo {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        left: auto;
-        height: 50px;
-        z-index: 2;
+        display: none;
       }
 
       .intro {
@@ -221,7 +207,10 @@
 </head>
 
 <body>
-  <img src="backtruckgaze.JPG" alt="Hero" class="hero-image" id="heroImage" />
+  <picture>
+    <source media="(max-width: 480px)" srcset="2222ba.jpeg">
+    <img src="backtruck.jpeg" alt="Hero" class="hero-image" id="heroImage" />
+  </picture>
 
   <div class="hero-overlay">
     <div class="blanket" id="blanket"></div>
