--- a/index.html
+++ b/index.html
@@ -222,12 +222,13 @@
   </div>
 
   <div class="black-box">
-    <p>Runke is, simply put, a project by and for people who love music.</p>
-    <p>We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.</p>
-    <p>The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass.</p>
-    <p>We love music, and we hope you'll join our little tribe and enjoy music with us.</p>
-    <p>We love you dude, chill...</p>
-    
+    <p>
+      Runke is, simply put, a project by and for people who love music.<br>
+      We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br>
+      The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass.<br>
+      We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
+      We love you dude, chill...<br>
+    </p>
   </div>
 
   <div class="footer">
