--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 </head>
 
 <body>
-  <img src="backtruckgaze.JPG" alt="Hero" class="hero-image" id="heroImage" />
+  <img src="backtruck.jpeg" alt="Hero" class="hero-image" id="heroImage" />
 
   <div class="hero-overlay">
     <div class="blanket" id="blanket"></div>
