--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       if (window.innerWidth <= 480) {
         heroImage.src = '2222ba.jpeg';
       } else {
-        heroImage.src = 'backtruckgaze.JPG';
+        heroImage.src = 'backtruck.jpeg';
       }
     }
 
