--- a/index.html
+++ b/index.html
@@ -163,6 +163,15 @@
         padding-bottom: 100px;
       }
 
+      .hero-image {
+        position: static;
+        top: 0;
+        height: 200px;
+        object-fit: cover;
+        object-position: center;
+        z-index: 1;
+      }
+
       .logo {
         display: none;
       }
@@ -241,9 +250,9 @@
 
     function updateHeroImage() {
       if (window.innerWidth <= 480) {
-        heroImage.src = '2222ba.jpeg';
+        heroImage.src = '2222ba.jpeg'; // Use 2222ba.jpeg on mobile
       } else {
-        heroImage.src = 'backtruck.jpeg';
+        heroImage.src = 'backtruck.jpeg'; 
       }
     }
 
