--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
     <p>
       Runke is, simply put, a project by and for people who love music.<br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br>
-      The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass.<br>
-      We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
-      We love you dude, chill...<br>
+      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br>
+      We love music, and we hope you'll join our journey and enjoy music with us.<br>
     </p>
   </div>
 
