--- a/index.html
+++ b/index.html
@@ -153,6 +153,47 @@
       color: #ccc;
     }
 
+    /* New modal style for the disclaimer */
+    .disclaimer-modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .disclaimer-content {
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .disclaimer-content p {
+      font-size: 18px;
+    }
+
+    .disclaimer-content button {
+      background-color: #00f;
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    .disclaimer-content button:hover {
+      background-color: #ccc;
+    }
+
     @media (max-width: 480px) {
       .hero {
         height: auto;
@@ -211,12 +252,25 @@
         font-size: 16.5px;
         line-height: 1.5;
       }
+
+      /* Show the disclaimer modal only on devices below 480px */
+      .disclaimer-modal {
+        display: flex;
+      }
     }
   </style>
 </head>
 
 <body>
-  <img src="backtruck.jpeg" alt="Hero" class="hero-image" id="heroImage" />
+  <!-- Disclaimer Modal -->
+  <div class="disclaimer-modal" id="disclaimerModal">
+    <div class="disclaimer-content">
+      <p><strong>WARNING:</strong> This site is really only optimized on computer, so sorry if it looks bad on your phone.</p>
+      <button id="disclaimerButton">OK</button>
+    </div>
+  </div>
+
+  <img src="backtruckgaze.JPG" alt="Hero" class="hero-image" id="heroImage" />
 
   <div class="hero-overlay">
     <div class="blanket" id="blanket"></div>
@@ -234,8 +288,9 @@
     <p>
       Runke is, simply put, a project by and for people who love music.<br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br>
-      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br>
-      We love music, and we hope you'll join our journey and enjoy music with us.<br>
+      The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass.<br>
+      We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
+      We love you dude, chill...<br>
     </p>
   </div>
 
@@ -246,12 +301,14 @@
   <script>
     const heroImage = document.getElementById('heroImage');
     const blanket = document.getElementById('blanket');
+    const disclaimerModal = document.getElementById('disclaimerModal');
+    const disclaimerButton = document.getElementById('disclaimerButton');
 
     function updateHeroImage() {
       if (window.innerWidth <= 480) {
         heroImage.src = '2222ba.jpeg'; // Use 2222ba.jpeg on mobile
       } else {
-        heroImage.src = 'backtruck.jpeg'; 
+        heroImage.src = 'backtruckgaze.JPG'; // Use backtruckgaze.JPG on desktop
       }
     }
 
@@ -271,6 +328,11 @@
       blanket.style.backdropFilter = `blur(${blurAmount}px)`;
       heroImage.style.filter = `blur(${1 + blurAmount}px)`;
       heroImage.style.transform = `scale(${scaleAmount})`;
+    });
+
+    // When the user clicks the OK button in the disclaimer
+    disclaimerButton.addEventListener('click', () => {
+      disclaimerModal.style.display = 'none';
     });
   </script>
 </body>
