--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     </div>
   </div>
 
-  <img src="backtruckgaze.JPG" alt="Hero" class="hero-image" id="heroImage" />
+  <img src="backtruck.jpeg" alt="Hero" class="hero-image" id="heroImage" />
 
   <div class="hero-overlay">
     <div class="blanket" id="blanket"></div>
@@ -287,10 +287,12 @@
   <div class="black-box">
     <p>
       Runke is, simply put, a project by and for people who love music.<br>
+      <br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br>
+      <br>
       The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass.<br>
+      <br>
       We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
-      We love you dude, chill...<br>
     </p>
   </div>
 
@@ -308,7 +310,7 @@
       if (window.innerWidth <= 480) {
         heroImage.src = '2222ba.jpeg'; // Use 2222ba.jpeg on mobile
       } else {
-        heroImage.src = 'backtruckgaze.JPG'; // Use backtruckgaze.JPG on desktop
+        heroImage.src = 'backtruck.jpeg';
       }
     }
 
@@ -330,7 +332,7 @@
       heroImage.style.transform = `scale(${scaleAmount})`;
     });
 
-    // When the user clicks the OK button in the disclaimer
+  
     disclaimerButton.addEventListener('click', () => {
       disclaimerModal.style.display = 'none';
     });
