--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       <br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br>
       <br>
-      The group roles are as follows: Dane on guitar, Deytan on drums, and Lucas on bass.<br>
+      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br>
       <br>
       We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
     </p>
