--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         line-height: 1.5;
       }
 
-      /* Show the disclaimer modal only on devices below 480px */
+     
       .disclaimer-modal {
         display: flex;
       }
@@ -265,8 +265,8 @@
   <!-- Disclaimer Modal -->
   <div class="disclaimer-modal" id="disclaimerModal">
     <div class="disclaimer-content">
-      <p><strong>WARNING:</strong> This site is really only optimized on computer, so sorry if it looks bad on your phone.</p>
-      <button id="disclaimerButton">OK</button>
+      <p><strong>WARNING:</strong> This site is really only optimized on computer, so it won't be very pretty on the phone we can tell you are on.</p>
+      <button id="disclaimerButton">ok brah</button>
     </div>
   </div>
 
