--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
   <!-- Disclaimer Modal -->
   <div class="disclaimer-modal" id="disclaimerModal">
     <div class="disclaimer-content">
-      <p><strong>WARNING:</strong> This site is really only optimized on computer, so it won't be very pretty on the phone we can tell you are on.</p>
+      <p><strong>WARNING:</strong> This site is really only optimized on computer, so it won't be very pretty on the phone we can tell you are using.</p>
       <button id="disclaimerButton">ok brah</button>
     </div>
   </div>
@@ -308,7 +308,7 @@
 
     function updateHeroImage() {
       if (window.innerWidth <= 480) {
-        heroImage.src = '2222ba.jpeg'; // Use 2222ba.jpeg on mobile
+        heroImage.src = '2222ba.jpg'; 
       } else {
         heroImage.src = 'backtruck.jpeg';
       }
